@@ -10,6 +10,7 @@
    autosummary_dummy_module
    autosummary_dummy_module.Foo
    autosummary_dummy_module.Foo.Bar
+   autosummary_dummy_module.Foo.value
    autosummary_dummy_module.bar
    autosummary_dummy_module.qux
    autosummary_importfail
